--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
 
     <title>Generador de Presupuestos</title>
 
-    <!-- Material Icons-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <!-- Google Fonts -->
+    <!--https://developers.google.com/fonts/faq?hl=es-419-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:wght@100;300;400;900&family=Ubuntu&display=swap&family=Merriweather+Sans&display=swap&family=Roboto&display=swap"
         rel="stylesheet">
 
-    <!-- CSS Stylesheets -->
+    <!-- Bootstrap -->
+    <!-- https://github.com/twbs/bootstrap/blob/v4.0.0/LICENSE -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -27,6 +26,7 @@
 
 
     <!-- feather icons-->
+    <!-- https://github.com/feathericons/feather/blob/master/LICENSE -->
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
     <!-- Bootstrap Scripts -->
@@ -40,12 +40,15 @@
         crossorigin="anonymous"></script>
 
     <!--jsPDF-->
+    <!--https://github.com/parallax/jsPDF/blob/master/LICENSE-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <!--html2canvas-->
+    <!--https://github.com/niklasvh/html2canvas/blob/master/LICENSE-->
     <script src="https://github.com/niklasvh/html2canvas/releases/download/v1.4.1/html2canvas.min.js"></script>
 
     <!-- XLSX-->
+    <!--https://docs.sheetjs.com/docs/miscellany/license/-->
     <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
 
