--- a/setup.html
+++ b/setup.html
@@ -8,17 +8,17 @@
 
     <title>Sandbox</title>
 
-    <!-- Material Icons-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <!-- Google Fonts -->
+    <!--https://developers.google.com/fonts/faq?hl=es-419-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:wght@100;300;400;900&family=Ubuntu&display=swap&family=Merriweather+Sans&display=swap&family=Roboto&display=swap"
         rel="stylesheet">
 
-    <!-- CSS Stylesheets -->
+
+    <!-- Bootstrap -->
+    <!-- https://github.com/twbs/bootstrap/blob/v4.0.0/LICENSE -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/styles.css">
 
     <!-- feather icons-->
+    <!-- https://github.com/feathericons/feather/blob/master/LICENSE -->
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
     <!-- Bootstrap Scripts -->
@@ -40,22 +41,16 @@
         crossorigin="anonymous"></script>
 
     <!--jsPDF-->
+    <!--https://github.com/parallax/jsPDF/blob/master/LICENSE-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <!--html2canvas-->
+    <!--https://github.com/niklasvh/html2canvas/blob/master/LICENSE-->
     <script src="https://github.com/niklasvh/html2canvas/releases/download/v1.4.1/html2canvas.min.js"></script>
 
     <!-- XLSX-->
+    <!--https://docs.sheetjs.com/docs/miscellany/license/-->
     <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
-
-    <!-- Filesaver-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"
-        integrity="sha512-csNcFYJniKjJxRWRV1R7fvnXrycHP6qDR21mgz1ZP55xY5d+aHLfo9/FcGDQLfn2IfngbAHd8LdfsagcCqgTcQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"> </script>
-
-    <!--js-Cookie-->
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
-
 
 </head>
 
@@ -63,32 +58,7 @@
 
 
     <div class="container-fluid">
-        <!--
-        <div class="row fixed-top  menu-toolbar bg-dark">
-            <div class="col-12">
-                <div class="row menu-toolbar-title">
-                    <h1>Generador de presupuestos</h1>
-                </div>
-                <div class="row menu-toolbar-options">
-                    <div class="col-3">
-                    </div>
-                    <div class="col-3">
-                    </div>
-                    <div class="col-3">
-                    </div>
-                    <div class="col-3">
-                          Button trigger modal  
-        <button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
-            id="hiddenModalButton" style="display: none;">
-            Launch static backdrop modal
-        </button>
 
-    </div>
-
-    </div>
-    </div>
-    </div>
-    -->
         <div class="row fixed-top  menu-toolbar bg-dark">
             <div class="col-12">
                 <div class="row menu-toolbar-options">
