se agrega un favicon.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <!--https://docs.sheetjs.com/docs/miscellany/license/-->
     <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
 
 </head>
 
