--- a/setup.html
+++ b/setup.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
-    <title>Sandbox</title>
+    <title>Generador de Presupuestos</title>
 
     <!-- Google Fonts -->
     <!--https://developers.google.com/fonts/faq?hl=es-419-->
@@ -51,6 +50,9 @@
     <!-- XLSX-->
     <!--https://docs.sheetjs.com/docs/miscellany/license/-->
     <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
 
 </head>
 
